# serializer version: 1
# name: test_all_entities[water_heater.model0_domestic_hot_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.model0_domestic_hot_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Domestic hot water',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Domestic hot water',
    'platform': 'vicare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 1>,
    'translation_key': 'domestic_hot_water',
    'unique_id': 'gateway0_deviceSerialVitodens300W-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[water_heater.model0_domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'model0 Domestic hot water',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 1>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE_UNIT: 'temperature_unit'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.model0_domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[water_heater.model0_domestic_hot_water_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.model0_domestic_hot_water_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Domestic hot water',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Domestic hot water',
    'platform': 'vicare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 1>,
    'translation_key': 'domestic_hot_water',
    'unique_id': 'gateway0_deviceSerialVitodens300W-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[water_heater.model0_domestic_hot_water_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'model0 Domestic hot water',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 10,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 1>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE_UNIT: 'temperature_unit'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.model0_domestic_hot_water_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_get_circulation_schedule
  dict({
    'water_heater.model0_domestic_hot_water': dict({
      'active': True,
      'friday': list([
        dict({
          'end': '09:00',
          'mode': 'on',
          'position': 0,
          'start': '05:30',
        }),
        dict({
          'end': '13:00',
          'mode': 'on',
          'position': 1,
          'start': '12:00',
        }),
        dict({
          'end': '20:00',
          'mode': 'on',
          'position': 2,
          'start': '18:00',
        }),
      ]),
      'monday': list([
        dict({
          'end': '09:00',
          'mode': 'on',
          'position': 0,
          'start': '05:30',
        }),
        dict({
          'end': '13:00',
          'mode': 'on',
          'position': 1,
          'start': '12:00',
        }),
        dict({
          'end': '20:00',
          'mode': 'on',
          'position': 2,
          'start': '18:00',
        }),
      ]),
      'saturday': list([
        dict({
          'end': '09:30',
          'mode': 'on',
          'position': 0,
          'start': '07:00',
        }),
        dict({
          'end': '13:00',
          'mode': 'on',
          'position': 1,
          'start': '12:00',
        }),
        dict({
          'end': '20:00',
          'mode': 'on',
          'position': 2,
          'start': '18:00',
        }),
      ]),
      'sunday': list([
        dict({
          'end': '09:30',
          'mode': 'on',
          'position': 0,
          'start': '07:00',
        }),
        dict({
          'end': '13:00',
          'mode': 'on',
          'position': 1,
          'start': '12:00',
        }),
        dict({
          'end': '20:00',
          'mode': 'on',
          'position': 2,
          'start': '18:00',
        }),
      ]),
      'thursday': list([
        dict({
          'end': '09:00',
          'mode': 'on',
          'position': 0,
          'start': '05:30',
        }),
        dict({
          'end': '13:00',
          'mode': 'on',
          'position': 1,
          'start': '12:00',
        }),
        dict({
          'end': '20:00',
          'mode': 'on',
          'position': 2,
          'start': '18:00',
        }),
      ]),
      'tuesday': list([
        dict({
          'end': '09:00',
          'mode': 'on',
          'position': 0,
          'start': '05:30',
        }),
        dict({
          'end': '13:00',
          'mode': 'on',
          'position': 1,
          'start': '12:00',
        }),
        dict({
          'end': '20:00',
          'mode': 'on',
          'position': 2,
          'start': '18:00',
        }),
      ]),
      'wednesday': list([
        dict({
          'end': '09:00',
          'mode': 'on',
          'position': 0,
          'start': '05:30',
        }),
        dict({
          'end': '13:00',
          'mode': 'on',
          'position': 1,
          'start': '12:00',
        }),
        dict({
          'end': '20:00',
          'mode': 'on',
          'position': 2,
          'start': '18:00',
        }),
      ]),
    }),
  })
# ---
